objects/ErrorMessages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Standard configurable Error Messages to be shared throughout the system.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Identifies the scenario that displays the message</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Text of message to output to user</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>Application or Module message is related to</description>
        <label>Module</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Admin_Email__c</fullName>
        <description>Email address for exception emails</description>
        <label>Sys Admin Email</label>
        <type>Email</type>
    </fields>
    <label>ErrorMessages</label>
</CustomObject>